Trying to fix issue with width on smaller screens.

--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -30,6 +30,10 @@
     margin: 0 auto;
 }
 
+.no-padding {
+    padding: 0;
+}
+
 .page-header{
     font-size:40px !important;
 }
